// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mapCoseHeader should map COSE header with alg 1`] = `
{
  "-1": {
    "-1": 4,
    "-2": {
      "data": [
        120,
        45,
        99,
        111,
        111,
        114,
        100,
        105,
        110,
        97,
        116,
        101,
      ],
      "type": "Buffer",
    },
    "-4": {
      "data": [
        100,
        45,
        112,
        114,
        105,
        118,
        97,
        116,
        101,
        45,
        107,
        101,
        121,
      ],
      "type": "Buffer",
    },
    "1": 1,
  },
  "-20": "salt",
  "1": -25,
  "16": "application/cwt",
  "2": [
    1,
    3,
    -1,
  ],
  "3": "application/cwt",
  "33": [
    "certificate1",
    "certificate2",
  ],
  "34": "x5t",
  "35": "https://example.com/certificate",
  "4": {
    "data": [
      55,
      57,
      98,
      57,
      99,
      98,
      54,
      100,
      45,
      57,
      52,
      100,
      55,
      45,
      53,
      100,
      50,
      54,
      45,
      97,
      97,
      56,
      99,
      45,
      102,
      57,
      98,
      56,
      99,
      53,
      102,
      52,
      57,
      97,
      56,
      48,
    ],
    "type": "Buffer",
  },
  "5": "iv",
  "701": "https://example.com/jwks.json",
  "702": {
    "-1": 1,
    "-2": {
      "data": [
        120,
        45,
        99,
        111,
        111,
        114,
        100,
        105,
        110,
        97,
        116,
        101,
      ],
      "type": "Buffer",
    },
    "-3": {
      "data": [
        121,
        45,
        99,
        111,
        111,
        114,
        100,
        105,
        110,
        97,
        116,
        101,
      ],
      "type": "Buffer",
    },
    "-4": {
      "data": [
        100,
        45,
        112,
        114,
        105,
        118,
        97,
        116,
        101,
        45,
        107,
        101,
        121,
      ],
      "type": "Buffer",
    },
    "1": 2,
    "2": {
      "data": [
        55,
        55,
        48,
        99,
        52,
        49,
        49,
        56,
        45,
        102,
        98,
        56,
        97,
        45,
        53,
        56,
        56,
        101,
        45,
        97,
        48,
        55,
        100,
        45,
        50,
        50,
        102,
        54,
        56,
        51,
        52,
        57,
        101,
        98,
        52,
        101,
      ],
      "type": "Buffer",
    },
    "3": "ES256",
    "use": "sig",
  },
  "703": {
    "data": [
      97,
      55,
      101,
      102,
      101,
      97,
      48,
      48,
      45,
      51,
      49,
      48,
      97,
      45,
      53,
      48,
      102,
      98,
      45,
      57,
      51,
      54,
      102,
      45,
      98,
      102,
      49,
      50,
      97,
      52,
      102,
      99,
      48,
      55,
      57,
      57,
    ],
    "type": "Buffer",
  },
  "704": 1234567890,
  "705": "p2s-salt",
  "706": "tag",
}
`;

exports[`mapCoseHeader should map COSE header with enc 1`] = `
{
  "-1": {
    "-1": 4,
    "-2": {
      "data": [
        120,
        45,
        99,
        111,
        111,
        114,
        100,
        105,
        110,
        97,
        116,
        101,
      ],
      "type": "Buffer",
    },
    "-4": {
      "data": [
        100,
        45,
        112,
        114,
        105,
        118,
        97,
        116,
        101,
        45,
        107,
        101,
        121,
      ],
      "type": "Buffer",
    },
    "1": 1,
  },
  "-20": "salt",
  "1": 1,
  "16": "application/cwt",
  "2": [
    1,
    3,
    -1,
  ],
  "3": "application/cwt",
  "33": [
    "certificate1",
    "certificate2",
  ],
  "34": "x5t",
  "35": "https://example.com/certificate",
  "4": {
    "data": [
      55,
      57,
      98,
      57,
      99,
      98,
      54,
      100,
      45,
      57,
      52,
      100,
      55,
      45,
      53,
      100,
      50,
      54,
      45,
      97,
      97,
      56,
      99,
      45,
      102,
      57,
      98,
      56,
      99,
      53,
      102,
      52,
      57,
      97,
      56,
      48,
    ],
    "type": "Buffer",
  },
  "5": "iv",
  "701": "https://example.com/jwks.json",
  "702": {
    "-1": 1,
    "-2": {
      "data": [
        120,
        45,
        99,
        111,
        111,
        114,
        100,
        105,
        110,
        97,
        116,
        101,
      ],
      "type": "Buffer",
    },
    "-3": {
      "data": [
        121,
        45,
        99,
        111,
        111,
        114,
        100,
        105,
        110,
        97,
        116,
        101,
      ],
      "type": "Buffer",
    },
    "-4": {
      "data": [
        100,
        45,
        112,
        114,
        105,
        118,
        97,
        116,
        101,
        45,
        107,
        101,
        121,
      ],
      "type": "Buffer",
    },
    "1": 2,
    "2": {
      "data": [
        55,
        55,
        48,
        99,
        52,
        49,
        49,
        56,
        45,
        102,
        98,
        56,
        97,
        45,
        53,
        56,
        56,
        101,
        45,
        97,
        48,
        55,
        100,
        45,
        50,
        50,
        102,
        54,
        56,
        51,
        52,
        57,
        101,
        98,
        52,
        101,
      ],
      "type": "Buffer",
    },
    "3": "ES256",
    "use": "sig",
  },
  "703": {
    "data": [
      97,
      55,
      101,
      102,
      101,
      97,
      48,
      48,
      45,
      51,
      49,
      48,
      97,
      45,
      53,
      48,
      102,
      98,
      45,
      57,
      51,
      54,
      102,
      45,
      98,
      102,
      49,
      50,
      97,
      52,
      102,
      99,
      48,
      55,
      57,
      57,
    ],
    "type": "Buffer",
  },
  "704": 1234567890,
  "705": "p2s-salt",
  "706": "tag",
}
`;
